--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,7 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
-    <!--Layout Dimension-->
+    <!-- Layout Dimension -->
     <dimen name="textsize_large">20sp</dimen>
     <dimen name="textsize_medium">16sp</dimen>
     <dimen name="textsize_normal">12sp</dimen>
@@ -13,4 +13,10 @@
     <dimen name="margin_normal">16dp</dimen>
 
     <dimen name="logo_height">200dp</dimen>
+
+    <!-- Tab Dimension -->
+    <dimen name="tab_max_width">264dp</dimen>
+    <dimen name="tab_padding_bottom">16dp</dimen>
+    <dimen name="tab_label">14sp</dimen>
+    <dimen name="custom_tab_layout_height">72dp</dimen>
 </resources>
