--- a/app/src/main/res/layout/card_staff_available.xml
+++ b/app/src/main/res/layout/card_staff_available.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:elevation="@dimen/card_elevation"
-    android:layout_marginTop="@dimen/margin_normal">
+    android:layout_marginLeft="@dimen/margin_normal"
+    android:layout_marginTop="@dimen/margin_normal"
+    android:layout_marginRight="@dimen/margin_normal">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,19 +16,17 @@
 
         <TextView
             android:id="@+id/staff_available_card_textview_title"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_normal"
+            android:textSize="@dimen/textsize_medium"
             android:text="@string/staff_available_card_title" />
 
         <TextView
             android:id="@+id/staff_available_card_textview_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/margin_normal"
-            android:layout_marginBottom="@dimen/margin_normal"
-            android:layout_marginLeft="@dimen/margin_normal"
-            android:textSize="@dimen/textsize_large" />
+            android:layout_marginTop="@dimen/margin_normal"
+            android:textSize="@dimen/textsize_xxlarge" />
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
