--- a/app/src/main/res/layout/fragment_manager_info.xml
+++ b/app/src/main/res/layout/fragment_manager_info.xml
@@ -7,8 +7,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/manager_info_fragment_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="@dimen/margin_normal"/>
+        android:layout_height="match_parent"/>
 
     <!--<TextView
         android:layout_width="match_parent"
