--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -4,11 +4,10 @@
     android:layout_height="match_parent"
     tools:context="com.itpteam11.visualisemandai.NotificationFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/notification_fragment"
-        android:layout_margin="@dimen/margin_normal"
-        android:layout_gravity="center_horizontal"/>
-
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/notificationListView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
