--- a/app/src/main/res/drawable/staff.xml
+++ b/app/src/main/res/drawable/staff.xml
@@ -1,90 +1,90 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="100dp"
-        android:height="80dp"
-        android:viewportWidth="100.0"
-        android:viewportHeight="80.0">
+        android:width="80dp"
+        android:height="60dp"
+        android:viewportWidth="80.0"
+        android:viewportHeight="60.0">
     <path
-        android:pathData="M0,0h100v80h-100z"
+        android:pathData="M0,0h80v60h-80z"
         android:fillColor="#7CB342"/>
     <path
-        android:pathData="M39.01,15.38c-2.37,-2.46 -15.8,-5.02 -23.19,-1.05c-9.09,4.88 -13.05,25.04 3.16,40.06c0.02,0.02 4.22,-1.05 4.22,-1.05L39.01,15.38z"
+        android:pathData="M31.21,8.31c-1.9,-1.97 -12.64,-4.02 -18.56,-0.84c-7.28,3.9 -10.44,20.03 2.53,32.05c0.02,0.02 3.37,-0.84 3.37,-0.84L31.21,8.31z"
         android:fillColor="#424242"/>
     <path
-        android:pathData="M34.85,49.47h-0.06v-2.46h-14.76v2.46c0,2.41 -0.01,5.03 -2.11,6.61v12.26h18.98V56.05C34.85,54.46 34.85,51.86 34.85,49.47L34.85,49.47z"
+        android:pathData="M27.88,35.58h-0.05v-1.97L16.03,33.61v1.97c0,1.93 -0.01,4.02 -1.69,5.29v9.8h15.18v-9.83C27.88,39.57 27.88,37.49 27.88,35.58L27.88,35.58z"
         android:fillColor="#FFD7A3"/>
     <path
-        android:pathData="M54.82,79.94V69.15c-0,-6.4 -5.19,-11.6 -11.6,-11.6l0,0h-0.35c-4.13,0 -6.14,-1.13 -7.13,-2.73l-2.08,9.06H21.16l-2.08,-9.06c-0.99,1.61 -3,2.73 -7.13,2.73h-0.35C5.19,57.56 0,62.75 0,69.15v10.79H54.82z"
+        android:pathData="M43.86,59.95v-8.63c-0,-5.12 -4.15,-9.28 -9.28,-9.28l0,0h-0.28c-3.31,0 -4.92,-0.9 -5.7,-2.19l-1.67,7.25L16.93,47.1l-1.67,-7.25c-0.79,1.28 -2.4,2.19 -5.71,2.19h-0.28c-5.13,0 -9.28,4.15 -9.28,9.28v8.63L43.86,59.95z"
         android:fillColor="#8D6E63"/>
     <path
-        android:pathData="M28.47,71.26c0,0.58 -0.47,1.05 -1.05,1.05c-0.58,0 -1.05,-0.47 -1.05,-1.05s0.47,-1.05 1.05,-1.05C27.99,70.21 28.47,70.68 28.47,71.26L28.47,71.26z"
+        android:pathData="M22.77,53.01c0,0.47 -0.38,0.84 -0.84,0.84c-0.47,0 -0.84,-0.38 -0.84,-0.84s0.38,-0.84 0.84,-0.84C22.4,52.17 22.77,52.54 22.77,53.01L22.77,53.01z"
         android:fillColor="#BCAAA4"/>
     <path
-        android:pathData="M28.47,76.53c0,0.58 -0.47,1.05 -1.05,1.05c-0.58,0 -1.05,-0.47 -1.05,-1.05c0,-0.58 0.47,-1.05 1.05,-1.05C27.99,75.48 28.47,75.95 28.47,76.53L28.47,76.53z"
+        android:pathData="M22.77,57.23c0,0.47 -0.38,0.84 -0.84,0.84c-0.47,0 -0.84,-0.38 -0.84,-0.84c0,-0.47 0.38,-0.84 0.84,-0.84S22.77,56.76 22.77,57.23L22.77,57.23z"
         android:fillColor="#BCAAA4"/>
     <path
-        android:pathData="M36.9,14.33l-7.38,40.06l5.27,-7.38C45.95,38.84 50.74,14.33 36.9,14.33L36.9,14.33z"
+        android:pathData="M29.52,7.46l-5.9,32.05l4.22,-5.9C36.76,27.07 40.59,7.46 29.52,7.46L29.52,7.46z"
         android:fillColor="#424242"/>
     <path
-        android:pathData="M35.85,60.72c0.38,0.1 0.73,0.16 1.05,0.19v-4.86c-2.04,-1.59 -2.05,-4.18 -2.05,-6.57h-0.06v-2.46H23.19l-3.16,1.05C22.14,50.44 28.6,58.74 35.85,60.72L35.85,60.72z"
+        android:pathData="M28.68,44.57c0.31,0.08 0.58,0.13 0.84,0.15v-3.89c-1.63,-1.27 -1.64,-3.35 -1.64,-5.26h-0.05v-1.97h-9.28l-2.53,0.84C17.71,36.35 22.88,42.99 28.68,44.57L28.68,44.57z"
         android:fillColor="#FDC88E"/>
     <path
-        android:pathData="M42.17,33.31c0,8.44 -8.4,18.98 -14.76,18.98c-6.36,0 -14.76,-10.53 -14.76,-18.98s6.61,-11.6 14.76,-11.6S42.17,24.86 42.17,33.31L42.17,33.31z"
+        android:pathData="M33.74,22.65c0,6.75 -6.72,15.18 -11.81,15.18c-5.09,0 -11.81,-8.43 -11.81,-15.18s5.29,-9.28 11.81,-9.28S33.74,15.89 33.74,22.65L33.74,22.65z"
         android:fillColor="#FFE1B2"/>
     <path
-        android:pathData="M29.52,16.44c-0.59,0 -2.52,0.67 -4.09,1.25l-0.13,-0.19c0,0 -0.22,0.17 -0.59,0.47c-0.87,0.33 -1.52,0.59 -1.52,0.59l0.25,0.41c-4,3.15 -12.08,7.2 -12.9,8.02c-1.05,1.05 3.16,13.05 3.16,12.65c0,-10.94 10.27,-12.15 16.87,-13.71c2.99,-0.7 7.03,-2.46 7.38,-4.22C38.31,19.95 30.57,16.44 29.52,16.44L29.52,16.44z"
+        android:pathData="M23.62,9.15c-0.47,0 -2.01,0.53 -3.27,1l-0.1,-0.16c0,0 -0.17,0.14 -0.47,0.37c-0.7,0.27 -1.21,0.47 -1.21,0.47l0.2,0.33c-3.2,2.52 -9.66,5.76 -10.32,6.42c-0.84,0.84 2.53,10.44 2.53,10.12c0,-8.75 8.21,-9.72 13.49,-10.97c2.39,-0.56 5.62,-1.97 5.9,-3.37C30.64,11.96 24.46,9.15 23.62,9.15L23.62,9.15z"
         android:fillColor="#424242"/>
     <path
-        android:pathData="M35.85,22.76c0,5.45 2.64,10.08 6.26,11c1.99,0.5 1.12,-5.73 1.12,-5.73s-2.81,-7.2 -3.16,-7.38c-0.35,-0.18 -3.16,-6.33 -3.16,-6.33l-6.33,5.27L35.85,22.76z"
+        android:pathData="M28.68,14.21c0,4.36 2.11,8.06 5.01,8.8c1.59,0.4 0.9,-4.59 0.9,-4.59s-2.25,-5.76 -2.53,-5.91c-0.28,-0.14 -2.53,-5.06 -2.53,-5.06l-5.06,4.22L28.68,14.21z"
         android:fillColor="#424242"/>
     <path
-        android:pathData="M40.6,33.4c1.73,-0.4 2.86,0.45 2.86,2.11c0,2.2 -2.32,7.58 -4.76,4.22C36.26,36.37 40.6,33.4 40.6,33.4L40.6,33.4z"
+        android:pathData="M32.48,22.72c1.38,-0.32 2.28,0.36 2.28,1.69c0,1.76 -1.86,6.06 -3.81,3.37C29.01,25.09 32.48,22.72 32.48,22.72L32.48,22.72z"
         android:fillColor="#FFE1B2"/>
     <path
-        android:pathData="M27.41,62.32l-5.27,5.27l-7.38,-10.43l2.46,-2.45c0.4,-0.4 1.03,-0.41 1.45,-0.04L27.41,62.32z"
+        android:pathData="M21.93,45.85l-4.22,4.22l-5.9,-8.34l1.97,-1.96c0.32,-0.32 0.83,-0.33 1.16,-0.03L21.93,45.85z"
         android:fillColor="#6D4C41"/>
     <path
-        android:pathData="M27.41,62.32l5.27,5.27l7.38,-10.43l-2.45,-2.45c-0.4,-0.4 -1.03,-0.41 -1.45,-0.04L27.41,62.32z"
+        android:pathData="M21.93,45.85l4.22,4.22l5.9,-8.34l-1.96,-1.96c-0.32,-0.32 -0.83,-0.33 -1.16,-0.03L21.93,45.85z"
         android:fillColor="#6D4C41"/>
     <path
-        android:pathData="M60.94,55.24c2.36,-1.52 2.09,-6.03 2.09,-7.09h18.98c0,1.05 -0.29,5.57 2.07,7.09L72.52,68.18L60.94,55.24z"
+        android:pathData="M48.75,40.19c1.89,-1.21 1.67,-4.83 1.67,-5.67h15.18c0,0.84 -0.23,4.46 1.65,5.67l-9.24,10.35L48.75,40.19z"
         android:fillColor="#FFD7A3"/>
     <path
-        android:pathData="M79.9,59.74l4.17,-4.51c-2.36,-1.52 -2.07,-6.04 -2.07,-7.09H63.03C64.39,52.06 73.4,58.78 79.9,59.74L79.9,59.74z"
+        android:pathData="M63.92,43.79l3.34,-3.61c-1.89,-1.21 -1.65,-4.83 -1.65,-5.67L50.43,34.52C51.51,37.65 58.72,43.02 63.92,43.79L63.92,43.79z"
         android:fillColor="#FDC88E"/>
     <path
-        android:pathData="M87.28,34.44c0,8.44 -4.86,18.98 -14.76,18.98s-14.76,-10.53 -14.76,-18.98c0,-8.44 6.61,-11.6 14.76,-11.6S87.28,26 87.28,34.44L87.28,34.44z"
+        android:pathData="M69.82,23.55c0,6.75 -3.89,15.18 -11.81,15.18s-11.81,-8.43 -11.81,-15.18c0,-6.76 5.29,-9.28 11.81,-9.28C64.54,14.28 69.82,16.8 69.82,23.55L69.82,23.55z"
         android:fillColor="#FFE1B2"/>
     <path
-        android:pathData="M66.19,16.52h-2.11c-4.08,0 -7.38,3.34 -7.38,7.42c0,3.78 1.05,10.51 1.05,10.51s1.19,-5.34 6.33,-7.38C67.23,25.81 66.19,16.52 66.19,16.52L66.19,16.52z"
+        android:pathData="M52.96,9.21h-1.69c-3.26,0 -5.9,2.67 -5.9,5.93c0,3.03 0.84,8.4 0.84,8.4s0.95,-4.27 5.06,-5.91C53.78,16.65 52.96,9.21 52.96,9.21L52.96,9.21z"
         android:fillColor="#424242"/>
     <path
-        android:pathData="M65.14,16.56c4.24,-6.52 15.15,-1.09 22.14,-1.09c1.05,1.51 1.78,12.98 0,18.98l-3.16,-5.27c0,0 -9.66,3.55 -20.03,-2.07"
+        android:pathData="M52.11,9.25c3.39,-5.21 12.12,-0.87 17.71,-0.87c0.84,1.21 1.42,10.39 0,15.18l-2.53,-4.22c0,0 -7.73,2.84 -16.02,-1.66"
         android:fillColor="#424242"/>
     <path
-        android:pathData="M48.93,59.18c-0.23,-0.14 -0.61,-0.27 -0.85,-0.39c-2.47,2.23 -4.29,5.55 -4.29,8.71V80h1.25V67.5C45.04,64.51 46.69,61.4 48.93,59.18z"
+        android:pathData="M39.15,43.35c-0.19,-0.11 -0.49,-0.22 -0.68,-0.31c-1.98,1.79 -3.43,4.44 -3.43,6.97L35.03,60h1L36.03,50C36.03,47.61 37.35,45.12 39.15,43.35z"
         android:fillColor="#6D4C41"/>
     <path
-        android:pathData="M88.07,56.49l-6.67,-2.11c-0.11,0.08 -0.26,0.17 -0.37,0.26l5.87,1.86c4.42,1.41 8.1,6.37 8.1,11.01V80h1.25V67.5C96.25,62.86 92.49,57.91 88.07,56.49z"
+        android:pathData="M70.46,41.2l-5.34,-1.69c-0.09,0.07 -0.21,0.14 -0.3,0.2l4.69,1.48c3.53,1.13 6.48,5.09 6.48,8.8L76,60h1L77,50C77,46.29 73.99,42.33 70.46,41.2z"
         android:fillColor="#8D6E63"/>
     <path
-        android:pathData="M99.93,79.94V67.5c0,-4.64 -3.62,-9.59 -8.03,-11.01l-6.6,-2.11c-3.55,2.71 -8.62,6.41 -12.78,6.41c-4.16,0 -9.23,-3.7 -12.78,-6.41l-6.6,2.11c-4.42,1.41 -8.03,6.37 -8.03,11.01v12.44L99.93,79.94L99.93,79.94z"
+        android:pathData="M79.95,59.95v-9.95c0,-3.71 -2.89,-7.67 -6.43,-8.8l-5.28,-1.69c-2.84,2.17 -6.9,5.13 -10.23,5.13c-3.33,0 -7.39,-2.96 -10.23,-5.13l-5.28,1.69c-3.53,1.13 -6.43,5.09 -6.43,8.8v9.95L79.95,59.95L79.95,59.95z"
         android:fillColor="#8D6E63"/>
     <path
-        android:pathData="M72.52,60.8l-5.27,5.27l-8.43,-11.6l2.46,-2.46c0.4,-0.4 1.03,-0.41 1.45,-0.04L72.52,60.8z"
+        android:pathData="M58.02,44.64l-4.22,4.22l-6.75,-9.28l1.97,-1.97c0.32,-0.32 0.83,-0.33 1.16,-0.03L58.02,44.64z"
         android:fillColor="#6D4C41"/>
     <path
-        android:pathData="M72.52,60.8l5.27,5.27l8.43,-11.6l-2.46,-2.46c-0.4,-0.4 -1.03,-0.41 -1.45,-0.04L72.52,60.8z"
+        android:pathData="M58.02,44.64l4.22,4.22l6.75,-9.28l-1.97,-1.97c-0.32,-0.32 -0.83,-0.33 -1.16,-0.03L58.02,44.64z"
         android:fillColor="#6D4C41"/>
     <path
-        android:pathData="M73.57,70.29c0,0.58 -0.47,1.05 -1.05,1.05c-0.58,0 -1.05,-0.47 -1.05,-1.05c0,-0.58 0.47,-1.05 1.05,-1.05C73.1,69.23 73.57,69.7 73.57,70.29L73.57,70.29z"
+        android:pathData="M58.86,52.23c0,0.47 -0.38,0.84 -0.84,0.84c-0.47,0 -0.84,-0.38 -0.84,-0.84c0,-0.47 0.38,-0.84 0.84,-0.84C58.48,51.39 58.86,51.76 58.86,52.23L58.86,52.23z"
         android:fillColor="#BCAAA4"/>
     <path
-        android:pathData="M73.57,75.56c0,0.58 -0.47,1.05 -1.05,1.05c-0.58,0 -1.05,-0.47 -1.05,-1.05s0.47,-1.05 1.05,-1.05C73.1,74.5 73.57,74.98 73.57,75.56L73.57,75.56z"
+        android:pathData="M58.86,56.45c0,0.47 -0.38,0.84 -0.84,0.84c-0.47,0 -0.84,-0.38 -0.84,-0.84s0.38,-0.84 0.84,-0.84C58.48,55.6 58.86,55.98 58.86,56.45L58.86,56.45z"
         android:fillColor="#BCAAA4"/>
     <path
-        android:pathData="M58.27,36.55c-1.58,-0.4 -2.62,0.45 -2.62,2.11c0,2.2 2.13,7.58 4.36,4.22C62.25,39.51 58.27,36.55 58.27,36.55L58.27,36.55z"
+        android:pathData="M46.61,25.24c-1.26,-0.32 -2.09,0.36 -2.09,1.69c0,1.76 1.7,6.06 3.49,3.37C49.8,27.61 46.61,25.24 46.61,25.24L46.61,25.24z"
         android:fillColor="#FFE1B2"/>
     <path
-        android:pathData="M86.53,36.55c1.73,-0.4 2.86,0.45 2.86,2.11c0,2.2 -2.32,7.58 -4.76,4.22C82.19,39.51 86.53,36.55 86.53,36.55L86.53,36.55z"
+        android:pathData="M69.23,25.24c1.38,-0.32 2.29,0.36 2.29,1.69c0,1.76 -1.86,6.06 -3.81,3.37C65.75,27.61 69.23,25.24 69.23,25.24L69.23,25.24z"
         android:fillColor="#FFE1B2"/>
 </vector>
