--- a/app/src/main/res/layout/card_showtime_status.xml
+++ b/app/src/main/res/layout/card_showtime_status.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/staff_count_cardview"
+    android:id="@+id/showtime_status_cardview"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:elevation="@dimen/card_elevation"
@@ -19,10 +19,10 @@
             android:background="@color/info_card_background">
 
             <ImageView
-                android:id="@+id/staff_count_card_imageview"
+                android:id="@+id/showtime_status_card_title_card_imageview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/staff"
+                android:src="@drawable/show"
                 android:layout_alignParentLeft="true"/>
 
             <TextView
@@ -30,10 +30,10 @@
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/textsize_xlarge"
                 android:textColor="@color/button_textcolor"
-                android:text="@string/staff_count_card_title"
+                android:text="@string/showtime_status_card_title"
                 android:gravity="center"
                 android:layout_centerInParent="true"
-                android:layout_toRightOf="@id/staff_count_card_imageview"/>
+                android:layout_toRightOf="@id/showtime_status_card_title_card_imageview"/>
 
         </RelativeLayout>
 
@@ -48,12 +48,62 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/textsize_medium"
-                android:text="@string/staff_count_card_working_title"
+                android:text="@string/showtime_status_card_show1_title"
                 android:layout_centerInParent="true"
                 android:layout_alignParentLeft="true"/>
 
             <TextView
-                android:id="@+id/staff_count_card_working_value"
+                android:id="@+id/showtime_status_card_show1_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/textsize_xlarge"
+                android:textStyle="bold"
+                android:layout_alignParentRight="true"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/margin_normal"
+            android:layout_marginTop="@dimen/margin_xsmall"
+            android:layout_marginRight="@dimen/margin_normal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/textsize_medium"
+                android:text="@string/showtime_status_card_show2_title"
+                android:layout_centerInParent="true"
+                android:layout_alignParentLeft="true"/>
+
+            <TextView
+                android:id="@+id/showtime_status_card_show2_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/textsize_xlarge"
+                android:textStyle="bold"
+                android:layout_alignParentRight="true"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/margin_normal"
+            android:layout_marginTop="@dimen/margin_xsmall"
+            android:layout_marginRight="@dimen/margin_normal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/textsize_medium"
+                android:text="@string/showtime_status_card_show3_title"
+                android:layout_centerInParent="true"
+                android:layout_alignParentLeft="true"/>
+
+            <TextView
+                android:id="@+id/showtime_status_card_show3_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/textsize_xlarge"
@@ -68,18 +118,18 @@
             android:layout_marginLeft="@dimen/margin_normal"
             android:layout_marginTop="@dimen/margin_xsmall"
             android:layout_marginRight="@dimen/margin_normal"
-            android:layout_marginBottom="@dimen/textsize_normal">
+            android:layout_marginBottom="@dimen/margin_normal">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/textsize_medium"
-                android:text="@string/staff_count_card_break_title"
+                android:text="@string/showtime_status_card_show4_title"
                 android:layout_centerInParent="true"
                 android:layout_alignParentLeft="true"/>
 
             <TextView
-                android:id="@+id/staff_count_card_break_value"
+                android:id="@+id/showtime_status_card_show4_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/textsize_xlarge"
