--- a/app/src/main/res/layout/card_staff_status.xml
+++ b/app/src/main/res/layout/card_staff_status.xml
@@ -5,27 +5,64 @@
     android:layout_height="wrap_content"
     android:elevation="@dimen/card_elevation"
     android:layout_marginLeft="@dimen/margin_normal"
-    android:layout_marginTop="@dimen/margin_normal"
+    android:layout_marginBottom="@dimen/margin_normal"
     android:layout_marginRight="@dimen/margin_normal">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="@dimen/margin_normal">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/staff_status_card_textview_title"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/textsize_medium" />
+            android:background="@color/info_card_background">
 
-        <TextView
-            android:id="@+id/staff_status_card_textview_content"
-            android:layout_width="wrap_content"
+            <ImageView
+                android:id="@+id/staff_status_card_imageview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/staff"
+                android:layout_alignParentLeft="true"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/textsize_xlarge"
+                android:textColor="@color/button_textcolor"
+                android:text="@string/staff_status_card_title"
+                android:gravity="center"
+                android:layout_centerInParent="true"
+                android:layout_toRightOf="@id/staff_count_card_imageview"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_normal"
-            android:textSize="@dimen/textsize_xxlarge" />
+            android:layout_marginLeft="@dimen/margin_normal"
+            android:layout_marginTop="@dimen/margin_xsmall"
+            android:layout_marginRight="@dimen/margin_normal"
+            android:layout_marginBottom="@dimen/textsize_normal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/textsize_medium"
+                android:text="@string/staff_status_card_work_status_title"
+                android:layout_centerInParent="true"
+                android:layout_alignParentLeft="true"/>
+
+            <TextView
+                android:id="@+id/staff_status_card_work_status_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/textsize_xlarge"
+                android:textStyle="bold"
+                android:layout_alignParentRight="true"/>
+
+        </RelativeLayout>
+
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
