--- a/app/src/main/res/layout/fragment_manager_info.xml
+++ b/app/src/main/res/layout/fragment_manager_info.xml
@@ -8,6 +8,7 @@
         android:id="@+id/manager_info_fragment_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical"/>
+        android:scrollbars="vertical"
+        android:paddingTop="@dimen/margin_normal"/>
 
 </RelativeLayout>
