--- a/app/src/main/res/layout/fragment_staff_info.xml
+++ b/app/src/main/res/layout/fragment_staff_info.xml
@@ -4,10 +4,11 @@
     android:layout_height="match_parent"
     tools:context="com.itpteam11.visualisemandai.StaffInfoFragment">
 
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/staff_info_fragment_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/staff_info_fragment"
-        android:layout_margin="@dimen/margin_normal"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        android:paddingTop="@dimen/margin_normal"/>
+
 </RelativeLayout>
