--- a/wear/src/main/res/layout/activity_tram.xml
+++ b/wear/src/main/res/layout/activity_tram.xml
@@ -16,10 +16,9 @@
         android:gravity="center"/>
 
     <android.support.wearable.view.WearableListView
-        android:id="@+id/wearable_list_view"
+        android:id="@+id/image_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
-        />
+        android:background="@color/white" />
 
 </LinearLayout>
