--- a/app/src/main/res/layout/card_staff_count.xml
+++ b/app/src/main/res/layout/card_staff_count.xml
@@ -56,7 +56,7 @@
                 android:id="@+id/staff_count_card_working_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/textsize_xlarge"
+                android:textSize="@dimen/textsize_medium"
                 android:textStyle="bold"
                 android:layout_alignParentRight="true"/>
 
@@ -82,7 +82,7 @@
                 android:id="@+id/staff_count_card_break_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/textsize_xlarge"
+                android:textSize="@dimen/textsize_medium"
                 android:textStyle="bold"
                 android:layout_alignParentRight="true"/>
 
