--- a/app/src/main/res/layout/card_staff_status.xml
+++ b/app/src/main/res/layout/card_staff_status.xml
@@ -57,7 +57,7 @@
                 android:id="@+id/staff_status_card_work_status_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/textsize_xlarge"
+                android:textSize="@dimen/textsize_medium"
                 android:textStyle="bold"
                 android:layout_alignParentRight="true"/>
 
