--- a/app/src/main/res/layout/card_weather.xml
+++ b/app/src/main/res/layout/card_weather.xml
@@ -56,7 +56,7 @@
                 android:id="@+id/weather_card_weather_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/textsize_xlarge"
+                android:textSize="@dimen/textsize_medium"
                 android:textStyle="bold"
                 android:layout_alignParentRight="true"/>
 
@@ -81,7 +81,7 @@
                 android:id="@+id/weather_card_temperature_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/textsize_xlarge"
+                android:textSize="@dimen/textsize_medium"
                 android:textStyle="bold"
                 android:layout_alignParentRight="true"/>
 
@@ -107,7 +107,7 @@
                 android:id="@+id/weather_card_psi_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/textsize_xlarge"
+                android:textSize="@dimen/textsize_medium"
                 android:textStyle="bold"
                 android:layout_alignParentRight="true"/>
 
