--- a/app/src/main/res/layout/notification_list.xml
+++ b/app/src/main/res/layout/notification_list.xml
@@ -31,8 +31,7 @@
             android:textSize="@dimen/textsize_small"
             android:padding="@dimen/proximity_margin"
             android:layout_alignParentRight="true"
-            android:layout_below="@+id/notification_list_timestamp"
-            />
+            android:layout_below="@+id/notification_list_timestamp" />
 
     </RelativeLayout>
 
