--- a/app/src/main/res/layout/fragment_send_notification.xml
+++ b/app/src/main/res/layout/fragment_send_notification.xml
@@ -5,7 +5,6 @@
     tools:context="com.itpteam11.visualisemandai.SendNotificationFragment"
     android:id="@+id/send_notification_container">
 
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -31,7 +30,6 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignBottom="@+id/ScrollView01"
                 android:nestedScrollingEnabled="true"
-                android:editable="true"
                 android:hint="Type your message here"
                 android:background="@android:color/transparent"
                 android:allowUndo="false"
@@ -41,10 +39,13 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_xsmall"
             android:text="Next"
             android:id="@+id/button_next"
             android:drawableTint="#27a890"
             android:layout_below="@+id/scrollview_message"
+            android:background="@color/button_backgroundcolor"
+            android:textColor="@color/button_textcolor"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
 
@@ -81,30 +82,7 @@
             android:layout_alignParentStart="true"
             android:layout_marginBottom="3dp"
             android:longClickable="true" />
+
     </RelativeLayout>
-
-    <!--
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/send_notification_fragment"
-        android:layout_margin="@dimen/margin_normal"
-        android:layout_gravity="center_horizontal"
-        android:id="@+id/textView" />
-
-    <Button
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:text="Message"
-        android:onClick="navToSendMessage"
-        android:id="@+id/message"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        android:drawableTint="#27a890"
-        android:background="#5de0c8" />
-    -->
 
 </FrameLayout>
