--- a/wear/src/main/res/layout/activity_tram.xml
+++ b/wear/src/main/res/layout/activity_tram.xml
@@ -7,13 +7,13 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_height="@dimen/title_height"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Header"
         android:id="@+id/textView"
-        android:textSize="12dp"
+        android:textSize="@dimen/title_textsize"
         android:layout_gravity="center_horizontal"
-        android:gravity="center"/>
+        android:gravity="center" />
 
     <android.support.wearable.view.WearableListView
         android:id="@+id/image_list_view"
