--- a/wear/src/main/res/layout/rect_activity_main.xml
+++ b/wear/src/main/res/layout/rect_activity_main.xml
@@ -1,32 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.wearable.view.BoxInsetLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:fitsSystemWindows="true"
-tools:context="com.itpteam11.visualisemandai.MainActivity"
-tools:deviceIds="wear_square">
-
-
-
-<android.support.wearable.view.WearableListView
-    android:id="@+id/listView1"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:context="com.itpteam11.visualisemandai.MainActivity"
+    tools:deviceIds="wear_square">
 
-    android:padding="5dp"
-    android:overScrollMode="never"
-    />
+    <android.support.wearable.view.WearableListView
+        android:id="@+id/listView1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        android:overScrollMode="never" />
 
-<TextView
-    android:id="@+id/text"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Working"
-    android:layout_below="@+id/title"
-    android:layout_above = "@+id/listView1"/>
-
-
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Working"
+        android:layout_below="@+id/title"
+        android:layout_above = "@+id/listView1"/>
 
 </android.support.wearable.view.BoxInsetLayout>
